--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,74 @@ h1 {
     text-transform: uppercase;
 
 }
+
+.subtitle {
+    font-size: 20px;
+    color: #9aa0a6;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+h2 {
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 36px;
+    color: #c6a85b; 
+    margin-top: 100px;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+}
+
+h3 {
+    font-size: 14px;
+    color: #9aa0a6;
+    text-transform: uppercase;
+    margin-top: 40px;
+    margin-bottom:10px;
+    letter-spacing: 2px;
+
+}
+
+p {
+    font-size: 18px;
+    margin-bottom: 20px;
+
+}
+
+section {
+    padding-left: 60px; 
+    padding-right: 60px;
+}
+
+blockquote {
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+
+blockquote p {
+    font-size: 24px;
+    color: #c6a85b;
+    font-style: italic;
+    text-align: center;
+}
+img {
+    width: 100%;
+}
+
+ul {
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+li {
+    font-size: 18px;
+    margin-bottom: 12px;
+}
+
+footer {
+    font-size: 14px;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin-top: 100px;
+    background-color: #000;
+}
